# place-pairs

./: .gitignore  README.md  docker-compose.yml  ohio_abroad.csv  ohio_abroad_locs.csv  pairs.csv  pyproject.toml
app/: nginx.conf
app/site/: all_ohio.html  all_ohio.js  index.html  main.css  main.js  ohio_places.json  pairs.json  pairs_close.json
nb/: pair_distances.ipynb
