[tool.poetry]
name = "place-pairs"
version = "0.1.0"
description = ""
authors = ["awbirdsall"]

[tool.poetry.dependencies]
python = "^3.7.1"
requests = "^2.26.0"
pandas = "^1.3.0"
numpy = "^1.21.0"
matplotlib = "^3.4.2"

[tool.poetry.dev-dependencies]
ipython = "^7.25.0"
jupyterlab = "^3.0.16"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
